@@ -3,6 +3,7 @@ Changelog for pdoTools.
 1.9.0 rc1
 ==============
 - [pdoMenu] Chunks of parents and categories are now depends on the descendants and ignores parameter isfolder.
+- [pdoNeighbors] Speed improvements.
 
 1.9.0 rc
 ==============
